# sparkle

./: .gitignore  Cargo.toml  README.md  check  test
.github/workflows/: ci.yaml  deploy.yaml
client/: Cargo.toml
client/src/: error.rs  imports.rs  lib.rs  monitor.rs  transaction.rs
client/src/kasplex/: args.rs  client.rs  main.rs  mod.rs
client/src/sparkle/: args.rs  client.rs  log.rs  main.rs
client/src/sparkle/wallet/: account.rs  mod.rs
core/: Cargo.toml
core/src/: constants.rs  error.rs  hash.rs  id.rs  imports.rs  inscription.rs  lib.rs  prelude.rs  url.rs  version.rs
core/src/model/: mod.rs
core/src/model/kasplex/v1/: mod.rs  model.rs  network.rs  protocol.rs
core/src/runtime/: mod.rs  runtime.rs  service.rs  signals.rs
database/: Cargo.toml
database/src/: access.rs  cache.rs  connection.rs  db.rs  error.rs  errors.rs  imports.rs  item.rs  key.rs  lib.rs  registry.rs  result.rs  set_access.rs  utils.rs  writer.rs
http/server/: Cargo.toml
http/server/src/: error.rs  imports.rs  lib.rs  limits.rs  params.rs  service.rs
http/server/todo/: certificates.rs  domain.rs  file.rs  static.rs  tls.rs  upload.rs
http/server/todo/full/: Cargo.toml  init.sh  main.rs
http/server/todo/full/templates/: 404.html  index.html
macros/: Cargo.toml
macros/src/: handler.rs  lib.rs
macros/src/wrpc/: client.rs  server.rs  wasm.rs
nexus/: Cargo.toml
nexus/src/: analyzer.rs  context.rs  error.rs  event.rs  imports.rs  lib.rs  nexus.rs  operations.rs  optypes.rs  processor.rs  utils.rs
nexus/src/evm/: mod.rs
nexus/src/evm/misc/: make
rpc/client/: Cargo.toml
rpc/client/src/: client.rs  error.rs  imports.rs  lib.rs  result.rs
rpc/core/: Cargo.toml
rpc/core/src/: error.rs  imports.rs  lib.rs  message.rs  ops.rs
rpc/server/: Cargo.toml
rpc/server/src/: connection.rs  error.rs  imports.rs  lib.rs  router.rs  server.rs  service.rs
rpc/wasm/: Cargo.toml  build-node  build-web
rpc/wasm/nodejs/: index.js  package.json
rpc/wasm/src/: client.rs  notify.rs  resolver.rs
rpc/wasm/web/: index.html
sparkled/: Cargo.toml
sparkled/src/: args.rs  error.rs  main.rs  sparkled.rs
tx/: Cargo.toml
tx/src/: lib.rs
wasm/: .gitignore  Cargo.toml  README.md  build-docs  build-node  build-node-dev  build-release  build-web  build-web-dev
wasm/src/: lib.rs
