[package]
name = "sparkle-rs"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "Kaspa Sparkle Client"

[lib]
name = "sparkle_rs"
crate-type = ["cdylib", "lib"]

[[bin]]
name = "sparkle"
path = "src/sparkle/main.rs"

[[bin]]
name = "kasplex"
path = "src/kasplex/main.rs"

[features]
wasm32-sdk = ["kaspa-wasm/wasm32-sdk"]
wasm32-core = ["kaspa-wasm/wasm32-core"]
wasm32-rpc = ["kaspa-wasm/wasm32-rpc"]
wasm32-keygen = ["kaspa-wasm/wasm32-keygen"]

full = [] # this will include Kaspa WASM SDK exports
# default = [
#     "wasm32-core",
#     "full" # for testing
# ]
default = []

[build-dependencies]
vergen = { version = "8.2.6", features = ["build", "git", "gitcl", "rustc", "cargo"] }

[dependencies]
sparkle-core.workspace = true
sparkle-rpc-core.workspace = true
sparkle-rpc-client.workspace = true

kaspa-addresses.workspace = true
kaspa-bip32.workspace = true
kaspa-consensus-core.workspace = true
kaspa-notify.workspace = true
kaspa-rpc-core.workspace = true
kaspa-utils.workspace = true
kaspa-wallet-core.workspace = true
kaspa-wallet-keys.workspace = true
kaspa-wrpc-client.workspace = true
kaspa-hashes.workspace = true
kaspa-wasm.workspace = true

workflow-core.workspace = true
workflow-http.workspace = true
workflow-log.workspace = true
workflow-wasm.workspace = true
workflow-rpc.workspace = true

cfg-if.workspace = true
futures.workspace = true
futures-util.workspace = true
js-sys.workspace = true
qrcode.workspace = true
rpassword.workspace = true
serde.workspace = true
serde_json.workspace = true
serde-wasm-bindgen.workspace = true
serde_with.workspace = true
thiserror.workspace = true
wasm-bindgen.workspace = true
wasm-bindgen-futures.workspace = true
web-sys.workspace = true

[target.'cfg(target_arch = "wasm32")'.dependencies]
kaspa-wasm.workspace = true

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
tokio.workspace = true
clap.workspace = true

