[package]
name = "sparkle-nexus"
rust-version.workspace = true
version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
edition.workspace = true
include.workspace = true

[lib]
crate-type = ["cdylib", "lib"]

[dependencies]
sparkle-macros.workspace = true
sparkle-core.workspace = true
sparkle-database.workspace = true
sparkle-rpc-core.workspace = true

kaspa-consensus-core.workspace = true
kaspa-notify.workspace = true
kaspa-rpc-core.workspace = true
kaspa-wrpc-client.workspace = true
kaspa-wallet-core.workspace = true
kaspa-txscript.workspace = true
kaspa-txscript-errors.workspace = true
kaspa-addresses.workspace = true

async-std.workspace = true
async-trait.workspace = true
borsh.workspace = true
cfg-if.workspace = true
downcast-rs.workspace = true
faster-hex.workspace = true
futures-util.workspace = true
futures.workspace = true
itertools.workspace = true
mini-moka.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
hex-literal.workspace = true
evm.workspace = true
primitive-types.workspace = true
hex.workspace = true

workflow-core.workspace = true
workflow-log.workspace = true
workflow-rpc.workspace = true
# workflow-websocket.workspace = true

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
tokio.workspace = true
dirs.workspace = true
num_cpus.workspace = true
