[package]
name = "tx"
rust-version.workspace = true
version.workspace = true
authors.workspace = true
license.workspace = true
edition.workspace = true
repository.workspace = true
include.workspace = true

[dependencies]
sparkle-macros.workspace = true
sparkle-core.workspace = true
sparkle-rpc-core.workspace = true
sparkle-nexus.workspace = true

kaspa-consensus-core.workspace = true
kaspa-notify.workspace = true
kaspa-rpc-core.workspace = true
kaspa-wrpc-client.workspace = true
kaspa-wallet-core.workspace = true
kaspa-txscript.workspace = true
kaspa-txscript-errors.workspace = true
kaspa-addresses.workspace = true

async-std.workspace = true
async-trait.workspace = true
borsh.workspace = true
cfg-if.workspace = true
downcast-rs.workspace = true
faster-hex.workspace = true
futures-util.workspace = true
futures.workspace = true
itertools.workspace = true
mini-moka.workspace = true
secp256k1.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true

workflow-core.workspace = true
workflow-log.workspace = true
workflow-rpc.workspace = true