[package]
name = "sparkle-wasm"
description = "Sparkle WASM32 bindings"
rust-version.workspace = true
version.workspace = true
edition.workspace = true
authors.workspace = true
include.workspace = true
repository.workspace = true
# wasm-pack requires this value to be a string
# (it can not be derived from the workspace)
license = "ISC"

[lib]
crate-type = ["cdylib"]

[dependencies]
sparkle-rs.workspace = true

kaspa-addresses.workspace = true
kaspa-consensus-core.workspace = true
kaspa-consensus-wasm.workspace = true
kaspa-rpc-core.workspace = true
kaspa-utils.workspace = true
kaspa-wasm-core.workspace = true
kaspa-wallet-core.workspace = true
kaspa-wallet-keys.workspace = true
kaspa-wrpc-client.workspace = true
kaspa-wrpc-wasm.workspace = true
kaspa-wasm.workspace = true

workflow-log.workspace = true
workflow-core.workspace = true
workflow-wasm.workspace = true

cfg-if.workspace = true
js-sys.workspace = true
num.workspace = true
wasm-bindgen.workspace = true

[features] 
wasm32-sdk = [
    "kaspa-wasm/wasm32-sdk",
]
wasm32-core = [
    "kaspa-wasm/wasm32-core",
]
wasm32-rpc = [
    "kaspa-wasm/wasm32-rpc",
]
wasm32-keygen = [
    "kaspa-wasm/wasm32-keygen",
]
default = []

[package.metadata.docs.rs]
targets = ["wasm32-unknown-unknown"]
