[package]
name = "sparkle-http-server"
rust-version.workspace = true
version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
edition.workspace = true
include.workspace = true

[lib]
crate-type = ["cdylib", "lib"]

[dependencies]
sparkle-macros.workspace = true
sparkle-core.workspace = true
sparkle-nexus.workspace = true

ahash.workspace = true
async-std.workspace = true
async-trait.workspace = true
borsh.workspace = true
cfg-if.workspace = true
downcast-rs.workspace = true
futures-util.workspace = true
futures.workspace = true
serde_json.workspace = true
serde.workspace = true
thiserror.workspace = true
workflow-core.workspace = true
workflow-log.workspace = true

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
axum.workspace = true
console.workspace = true
mime.workspace = true
tokio.workspace = true
tower-http.workspace = true
tower.workspace = true
tracing-subscriber.workspace = true