[package]
name = "sparkle-rpc-core"
rust-version.workspace = true
version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
edition.workspace = true
include.workspace = true

[lib]
crate-type = ["cdylib", "lib"]

[dependencies]
sparkle-macros.workspace = true
sparkle-core.workspace = true

async-std.workspace = true
async-trait.workspace = true
borsh.workspace = true
cfg-if.workspace = true
downcast-rs.workspace = true
futures-util.workspace = true
serde.workspace = true
thiserror.workspace = true

workflow-core.workspace = true
workflow-log.workspace = true
workflow-rpc.workspace = true
workflow-serializer.workspace = true

kaspa-consensus-core.workspace = true

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
tokio.workspace = true
