[dependencies]
axum = "0.5"
tokio = { version = "1", features = ["full"] }
hyper = { version = "0.14", features = ["full"] }
rustls = "0.20"
tokio-rustls = "0.23"
askama = "0.11"
moka = "0.10"
async-trait = "0.1"
tower = "0.4"
uuid = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
http = "0.2"
headers = "0.3"
